--- a/css/main.scss
+++ b/css/main.scss
@@ -1,18 +1,59 @@
+/****************
+    Template
+****************/
+
+@font-face {
+    font-family: "Avenir Black";
+    src: url(../font/Avenir_Black.ttf);
+}
+
+@font-face {
+    font-family: "Avenir Light";
+    src: url(../font/Avenir_Light.ttf);
+}
+
+.text-faded {
+	opacity: 0.65;
+}
+
+.text-grey {
+	color: #b9b9b9;
+}
+
+.text-yellow {
+	color: #d9f245;
+}
+
+.text-blue {
+	color: #5bb7ff;
+}
+
+.text-blue-dark {
+	color: #3874a3;
+}
+
+.text-green {
+	color: #90ffb2;
+}
+
+.text-green-dark {
+	color: #5aa074;
+}
+
+.text-red {
+	color: #ff274d;
+}
+
 body {
-	padding: 1.65rem;
-	background: rgb(25, 31, 37);
-	background: 
-		url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAQAAAAECAYAAACp8Z5+AAAAG0lEQVQIW2NkYGAwBuKzQAwGjDAGNgGwSgwVAFCGAgUGpiTrAAAAAElFTkSuQmCC),
-		/*#0c0c0c;*/
-		-webkit-radial-gradient(circle, rgb(25, 31, 37), rgb(5, 11, 20));
-
-	color: #f4f4f4;
-	text-align: center;
-	font-family: "Avenir-Light";
-	font-size: 0.85rem;
-	text-shadow: 0px 0px 2px #1b1b1b, 0px 0px 20px rgba(225, 225, 255, 0.45);
-
 	cursor: default;
+	overflow: hidden;
+
+	background: -webkit-radial-gradient(circle, rgb(25, 31, 41), rgb(5, 11, 24));
+
+	color: #f3f3f3;
+	text-align: center;
+	font-family: "Avenir Light";
+	font-size: 0.90rem;
 
 	main {
 		position: absolute;
@@ -20,97 +61,154 @@ body {
 		width: 9.8rem;
 	}
 
-	#body-flare, #body-flash {
-		position: fixed;
-		left: 0;
-		top: 0;
-		width: 85%;
-	}
-
 	#body-flare {
+		position: fixed;
+		left: 0; top: 0;
+		width: 100%;
+	}
+
+	#body-error {
 		z-index: -1;
+
+		position: fixed;
+		width: 100%;
+		height: 100%;
+		padding-top: 10vh;
+
+		background: #ff1718;
+
+		color: rgb(9, 20, 24);
+		text-align: center;
+		font-size: 80vh;
 	}
-}
 
-#header-logo o {
-	display: inline;
-	position: relative;
-	text-shadow: 0px 0px 0px rgba(55,143,254, 0.65);
-
-	/* Velocity($("blorp"), { scale: [ 1, 0 ] }, { duration: 3000, display: "block" }) */
-	blorp {
-		display: none;
-		left: 0.12rem;
-		bottom: 0.80rem;
+	#body-bigScore {
 		position: absolute;
-		width: 1.4rem;
-		height: 1.4rem;
-		background: #f4f4f4;
-		border-radius: 1rem;
+		left: 50%; bottom: -16vw; transform: translateX(-50%);
+
+		font-size: 40vw;
+		@extend .text-green;
+
+		&:after {
+			content: "Score";
+
+			position: absolute;
+			top: 4vw;
+			right: 1.75vw;
+
+			font-size: 1.35vw;
+			letter-spacing: 0.025vw;
+		}
 	}
 }
 
-#field--subscribe o {
-	_color: #d8d8d8;
-}
-
-.text-highlight {
-	color: #5bb7ff;
-}
-
-a {
+a, a:visited {
 	text-decoration: none;
+	@extend .text-yellow;
 }
 
-span.text {
-	display: inline-block;
+a, [data-query] {
+	cursor: pointer;
 
-	letter-spacing: 0.025rem;
+	&:hover, .accent {
+		@extend .text-blue;
+	}
+
+	&:active {
+		@extend .text-blue-dark;
+	}
 }
 
-header {
-	width: 9.35rem;
+#header {
+	padding-top: 1.65rem;
 
-	font-family: "Avenir-Black";
+	font-family: "Avenir Black";
 	text-transform: uppercase;
-	font-size: 2rem;
-	text-align: center;
-	text-shadow: 0px 0px 1px black;
+	font-size: 2.2rem;
 	letter-spacing: 0.025rem;
+
+	#header-code {
+		margin: 0rem auto -0.35rem auto;
+		width: 10.65rem;
+
+		text-align: right;
+		font-size: 0.35rem;
+		font-family: "Source Code Pro";
+		text-transform: none;
+
+		#header-code-property {
+			display: inline-block;
+			cursor: pointer;
+
+			@extend .text-yellow;
+
+			&:hover {
+				@extend .text-blue;
+			}
+
+			&:active {
+				@extend .text-blue-dark;
+			}
+		}
+	}
 
 	#header-logo {
 		text-shadow: 0px 0px 0px rgba(225, 245, 225, 0.50);
+
+		o {
+			display: inline;
+			position: relative;
+			text-shadow: 0px 0px 0px rgba(55,143,254, 0.65);
+
+			span {
+				left: 0.12rem;
+				bottom: 0.80rem;
+				position: absolute;
+
+				width: 1.4rem;
+				height: 1.4rem;
+
+				background: #f4f4f4;
+				border-radius: 1rem;
+			}
+		}
 	}
 
-	hr {
-		height: 5px;
-		width: 9.75rem;
-		margin: -0.25rem 0rem 0rem 0.05rem;
-		
-		opacity: 0;
+	#header-hr {
+		margin: -0.15rem auto 0rem auto;
+		height: 0.3rem;
+		width: 10.65rem;
+
 		background: #d9f245;
-		border: none;
 	}
 }
 
-#description {
-	margin: 0.9rem 0rem 1.4rem 0em;
+#description, #about {
+	margin: 0.85rem 0rem 0.5rem 0rem;
 
-	color: #f3f3f3;
 	letter-spacing: 0.035rem;
-	line-height: 1.075rem;
+	line-height: 1.035rem;
 
 	span {
-		color: #daeb7c;
+		@extend .text-grey;
+	}
+
+	p {
+		margin-top: 0rem;
 	}
 }
 
-div.field {
-	margin-top: 2rem;
+#about {
+	font-size: 0.825rem;
+}
+
+.field, .field {
+	margin-top: 1.65rem;
 
 	span.field-label {
 		display: inline-block;
-		margin-bottom: 0.375rem;
+		position: relative;
+		margin-bottom: 0.5rem;
 
 		text-transform: uppercase;
 		font-size: 0.6rem;
@@ -119,128 +217,187 @@ div.field {
 
 	div.field-input-container {
 		position: static;
-		width: 92.5%;
+		width: 100%;
 		margin: 0 auto;
 
 		input.field-input {
-			width: 100%;
-			padding-bottom: 0.175rem;
-
-			border: none;
-			border-bottom: 1px solid #1d1d1d;
-			box-shadow: 0px 3px 0px -2px #1c3348;
+			transition: color 550ms;
+			opacity: 0.85;
 			background: transparent;
+			border: none;
 
-			color: #a7c03e;
-			font-family: "Avenir-Light";
+			@extend .text-yellow;
 			letter-spacing: 0.03rem;
 			text-align: center;
-			font-weight: 100;
+			font-size: 0.8rem;
 
 			&:focus {
 				outline: none;
+
+				@extend .text-green-dark;
+				color: #caf400;
 			}
 
 			&::selection {
-			  background: #2482be;
+				background: #c0d230;
 			}
 		}
 
 		.field-input-symbols {
 			position: absolute;
-			margin-top: 0.2rem;
 			left: 45%;
 
 			color: #e8ff92;
-			font-size: 0.9rem;
+			font-size: 0.85rem;
+		}
+	}
+}
+
+.legend, .data {
+	margin: 0.3rem auto 0rem auto;
+
+	opacity: 0.65;
+
+	font-family: "Source Code Pro";
+	font-size: 0.575rem;
+	text-align: left;
+	line-height: 0.7rem;
+
+	tr:nth-child(1) td {
+		padding-top: 0.5rem;
+	}
+
+	td {
+		width: 100%;
+
+		white-space: nowrap;
+
+		&:nth-child(even) {
+			text-align: right;
+		}
+
+		&:nth-child(odd) {
+			@extend .text-grey;
 		}
 	}
 }
 
 .legend {
-	margin: 1.15rem auto 0rem auto;
-	width: 92%;
-	opacity: 0.225;
+	transition: opacity 135ms;
 
-	text-align: left;
-	text-shadow: 0px 0px 1px #0a0a0a;
-	font-family: "Source Code Pro";
-	font-size: 0.55rem;
-
-	tr:nth-child(1), tr:nth-child(4) {
-		opacity: 0.90;
+	&:hover {
+		opacity: 1;
 	}
+}
 
-	td:nth-child(odd) {
-		color: #b9b9b9;
-	}
+.data {
+	display: none;
+	overflow-y: scroll;
 
-	td:nth-child(even) {
-		color: #ddeb4c;
-		text-align: right;
+	position: absolute;
+	max-height: 18.5rem;
 
-		span {
-			@extend .text-highlight;
+	background: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAQAAAAECAYAAACp8Z5+AAAAG0lEQVQIW2NkYGAwBuKzQAwGjDAGNgGwSgwVAFCGAgUGpiTrAAAAAElFTkSuQmCC);
+
+	line-height: 0.75rem;
+
+	td {
+		&:nth-child(odd) {
+			@extend .text-yellow;
 		}
+
+		&:nth-child(even) {
+			@extend .text-green;
+		}
+	}
+
+	#data-cols {
+		opacity: 0.725;
+
+		margin-bottom: -0.2rem;
+
+		letter-spacing: 0.05rem;
+		font-family: "Avenir Light";
 	}
 }
 
 footer {
 	position: fixed;
-	bottom: 0.65rem;
-	left: calc(50% - 5rem);
+	bottom: 0.5rem;
+	left: 50%; transform: translateX(-50%);
 
-	text-shadow: 0px 0px 10px rgba(255, 255, 255, 0.35);
-
-	font-size: 8px;
+	color: #858585;
+	font-size: 0.4rem;
 
 	.footer-text {
-		opacity: 0.4;
-		color: #e1ff48;
+		@extend .text-yellow;
+		opacity: 0.475;
 		text-transform: uppercase;
-		transition: 250ms all;
-
-		&:hover {
-			opacity: 0.85;
-			color: #f1ff07;
-		}
+		letter-spacing: 0.04rem;
+		word-spacing: -0.075rem;
 	}
 
 	.footer-text--divider {
-		@extend .text-highlight;
+		padding: 0rem 0.10rem;
+
+		@extend .text-blue;
 	}
 }
 
-/* Start States */
-main, #field--subscribe, #legend--subscribe, footer {
-	display: none;
+/**************
+    Custom
+**************/
+
+#legend--subscribe tr td {
+	@extend .text-grey;
 }
 
-#body-flare, #body-flash {
-	opacity: 0;
+#legend--search-charts {
+	opacity: 0.85;
+
+	margin-top: -0.3rem;
+
+	td {
+		width: 10rem;
+
+		letter-spacing: 0.025rem;
+		font-size: 0.75rem;
+		font-family: "Avenir Light";
+		color: #ddeb4c;
+
+		&:nth-child(odd) {
+			padding-right: 0.6rem;
+
+			text-align: right;
+		}
+
+		&:nth-child(even) {
+			text-align: left;
+		}
+	}
 }
 
-#code {
-	display: none;
+#field--search-help {
 	position: absolute;
-	top: -0.45rem;
-	right: -0.1rem;
-	font-size: 0.3rem;
-	font-family: "Source Code Pro";
-	font-weight: 300;
-	color: #e1ff48;
-	text-transform: none;
-	text-shadow: 0px 0px 15px rgba(225, 219, 96, 0.5);
-	z-index: 55;
+	right: -0.925rem; top: -0.02rem;
 
+	color: #b5b5b5;
+	font-size: 0.4rem;
 
-	#dong { 
-		display: inline-block;
+	&:hover {
+		@extend .text-blue;
+		border-bottom: 1px solid #3874a3;
 	}
+}
 
-	#codesnippet {
-		transform-origin: 50% 50% -9px;
-		display: inline-block;
-		text-align: left;
-	}
+/*************
+    Start
+*************/
+
+main, #body-flare, #body-bigScore, #header-logo o span, #about, footer {
+	display: none;
+}
+
+#body-error, #header-code, #header-logo, #header-hr {
+	opacity: 0;
 }
